[metadata]
name = rtphelp
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Ping An RTP For Help With Twilio!
description-file = README.md
license = GPLv3
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    ride
[files]
packages =
    rtphelp
[entry_points]
console_scripts =
    rtphelp-server=rtphelp:main
